--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
+        <link rel="stylesheet" href="css/styles.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+        <script src="js/app.js"></script>
         <!--<link rel="stylesheet" href="css/main.css"> -->
     </head>
     <body>
