--- a/index.html
+++ b/index.html
@@ -56,10 +56,11 @@
                     </div> 
                 </div>
                 <div class="social">
-                    <a href=""><img src="/img/" alt="github"></a>
-                    <a href=""><img src="/img" alt="twitter"></a>
-                    <a href=""><img src="/img" alt="linkedin"></a>
-                    
+                    <div class="icons">
+                        <a href="https://github.com/Scoiatael85"><img src="images/github.png" alt="github"></a>
+                        <a href="https://twitter.com/Daelric"><img src="images/linkedin.png" alt="twitter"></a>
+                        <a href="https://www.linkedin.com/in/scott-davis-9a186091"><img src="images/twitter.png" alt="linkedin"></a>
+                    </div>
                 </div>
             </div>
             
