--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
         <link rel="stylesheet" href="css/styles.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
-        <script src="js/app.js"></script>
         <!--<link rel="stylesheet" href="css/main.css"> -->
     </head>
     <body>
@@ -37,7 +36,7 @@
             
         </div>
         <div class="experience">
-            
+            <h1>Experience</h1>
         </div>
         <div class="interests">
             <h1>My Interests</h1>
@@ -79,6 +78,7 @@
         </div>
 
         <script src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
+        <script src="js/app.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.4.min.js"><\/script>')</script>
 
         <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
