added tech skills

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
         <!-- Add your site or application content here -->
         <div class="contactHeader">
+        <img src="images/imagination.jpg" id="bg" alt="">
             <div class="name">
             <h1>Scott J. Davis</h1>
             <h3>Web Developer</h3>
@@ -79,7 +80,37 @@
         </div>
         <div class="breaker"></div>
         <div class="skills">
-            
+        <h1>Technical Skills</h1>
+            <div class="skillsflex">
+                <div class="set1">
+                    <ul class="set1text">
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>Javascript</li>
+                        <li>JQuery</li>
+                    </ul>
+                    <ul class="set1img">
+                        <li><img src="images/dice1.png" alt="" width="20"><img src="images/dice2.png" alt="" width="20"><img src="images/dice3.png" alt="" width="20"><img src="images/dice4.png" alt="" width="20"></li>
+                        <li><img src="images/dice1.png" alt="" width="20"><img src="images/dice2.png" alt="" width="20"><img src="images/dice3.png" alt="" width="20"><img src="images/dice4.png" alt="" width="20"></li>
+                        <li><img src="images/dice1.png" alt="" width="20"><img src="images/dice2.png" alt="" width="20"><img src="images/dice3.png" alt="" width="20"><img src="images/dice4.png" alt="" width="20"></li>
+                        <li><img src="images/dice1.png" alt="" width="20"><img src="images/dice2.png" alt="" width="20"><img src="images/dice3.png" alt="" width="20"><img src="images/dice4.png" alt="" width="20"></li>
+                    </ul>
+                </div>
+                <div class="set2">
+                    <ul class="set2text">
+                        <li>Bootstrap</li>
+                        <li>Responsive Design</li>
+                        <li>Sass</li>
+                        <li>SQL</li>
+                    </ul>
+                    <ul class="set2img">
+                        <li><img src="images/dice1.png" alt="" width="20"><img src="images/dice2.png" alt="" width="20"><img src="images/dice3.png" alt="" width="20"><img src="images/dice4.png" alt="" width="20"></li>
+                        <li><img src="images/dice1.png" alt="" width="20"><img src="images/dice2.png" alt="" width="20"><img src="images/dice3.png" alt="" width="20"><img src="images/dice4.png" alt="" width="20"></li>
+                        <li><img src="images/dice1.png" alt="" width="20"><img src="images/dice2.png" alt="" width="20"><img src="images/dice3.png" alt="" width="20"><img src="images/dice4.png" alt="" width="20"></li>
+                        <li><img src="images/dice1.png" alt="" width="20"><img src="images/dice2.png" alt="" width="20"><img src="images/dice3.png" alt="" width="20"><img src="images/dice4.png" alt="" width="20"></li>
+                    </ul>
+                </div>
+            </div>
         </div>
         <div class="breaker"></div>
         <div class="experience">
