added tech skills

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                     <ul class="set1img">
                         <li><img src="images/dice1.png" alt="" width="20"><img src="images/dice2.png" alt="" width="20"><img src="images/dice3.png" alt="" width="20"><img src="images/dice4.png" alt="" width="20"></li>
                         <li><img src="images/dice1.png" alt="" width="20"><img src="images/dice2.png" alt="" width="20"><img src="images/dice3.png" alt="" width="20"><img src="images/dice4.png" alt="" width="20"></li>
-                        <li><img src="images/dice1.png" alt="" width="20"><img src="images/dice2.png" alt="" width="20"><img src="images/dice3.png" alt="" width="20"><img src="images/dice4.png" alt="" width="20"></li>
-                        <li><img src="images/dice1.png" alt="" width="20"><img src="images/dice2.png" alt="" width="20"><img src="images/dice3.png" alt="" width="20"><img src="images/dice4.png" alt="" width="20"></li>
+                        <li><img src="images/dice1.png" alt="" width="20"><img src="images/dice2.png" alt="" width="20"><img src="images/dice3.png" alt="" width="20"></li>
+                        <li><img src="images/dice1.png" alt="" width="20"><img src="images/dice2.png" alt="" width="20"><img src="images/dice3.png" alt="" width="20"></li>
                     </ul>
                 </div>
                 <div class="set2">
@@ -104,10 +104,10 @@
                         <li>SQL</li>
                     </ul>
                     <ul class="set2img">
-                        <li><img src="images/dice1.png" alt="" width="20"><img src="images/dice2.png" alt="" width="20"><img src="images/dice3.png" alt="" width="20"><img src="images/dice4.png" alt="" width="20"></li>
-                        <li><img src="images/dice1.png" alt="" width="20"><img src="images/dice2.png" alt="" width="20"><img src="images/dice3.png" alt="" width="20"><img src="images/dice4.png" alt="" width="20"></li>
-                        <li><img src="images/dice1.png" alt="" width="20"><img src="images/dice2.png" alt="" width="20"><img src="images/dice3.png" alt="" width="20"><img src="images/dice4.png" alt="" width="20"></li>
-                        <li><img src="images/dice1.png" alt="" width="20"><img src="images/dice2.png" alt="" width="20"><img src="images/dice3.png" alt="" width="20"><img src="images/dice4.png" alt="" width="20"></li>
+                        <li><img src="images/dice1.png" alt="" width="20"><img src="images/dice2.png" alt="" width="20"><img src="images/dice3.png" alt="" width="20"></li>
+                        <li><img src="images/dice1.png" alt="" width="20"><img src="images/dice2.png" alt="" width="20"><img src="images/dice3.png" alt="" width="20"></li>
+                        <li><img src="images/dice1.png" alt="" width="20"><img src="images/dice2.png" alt="" width="20"><img src="images/dice3.png" alt="" width="20"></li>
+                        <li><img src="images/dice1.png" alt="" width="20"><img src="images/dice2.png" alt="" width="20"></li>
                     </ul>
                 </div>
             </div>
