--- a/index.html
+++ b/index.html
@@ -23,12 +23,15 @@
 
         <!-- Add your site or application content here -->
         <div class="contactHeader">
-        <img src="images/imagination.jpg" id="bg" alt="">
+            <img src="images/imagination.jpg" id="bg" alt="">
             <div class="name">
-            <h1>Scott J. Davis</h1>
-            <h3>Web Developer</h3>
-            <h3>Enter the World of the Imaginaiton!</h3>
+                <h1>Scott J. Davis</h1>
+                <h3>Web Developer</h3>
             </div>
+            <div class="quoteBox">
+                <h3 class="quote"></h3>    
+            </div>
+            
         </div>
         <div class="projects">
             <h1>Projects</h1>
@@ -152,6 +155,7 @@
         </div>
 
         <script src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
+        <script src="js/typed.js"></script>
         <script src="js/app.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.4.min.js"><\/script>')</script>
 
