small style changes

--- a/index.html
+++ b/index.html
@@ -33,51 +33,55 @@
             </div>
             
         </div>
-        <div class="projects">
-            <h1>Projects</h1>
-            <div class="projectFlex">
+        <div class="projectcontain">
+            <div class="projects">
+                <h1>Projects</h1>
+                <div class="projectFlex">
 
-                <a href="links/Bugg-Her/index.html"><div class="projectItem">
-                    <h3>Bugg-Her</h3>
-                    <div class="projectHover">
-                        <p>A fast and fun re-take on the old Frogger games. See what happens when you catch the golden scarab!</p>
+                    <a href="links/Bugg-Her/index.html"><div class="projectItem">
+                        <h3>Bugg-Her</h3>
+                        <div class="projectHover">
+                            <p>A fast and fun re-take on the old Frogger games. See what happens when you catch the golden scarab!</p>
+                        </div>
+                        <img class="projectImg" src="images/pink-girl.png" alt="">
+                    </div></a>
+                    <a href="links/Cat-Clicker/index.html"><div class="projectItem">
+                        <h3>Cat-Clicker</h3>
+                        <div class="projectHover">
+                            <p>Honestly, did this as a school asingment. It's a bit goofy... but who hates cat pics?!?</p>    
+                        </div>            
+                        <img class="projectImg" src="images/cat.png" alt="">
+                    </div></a>
+                    <a href="links/Start/index.html"><div class="projectItem">
+                        <h3>Reponsive Blog</h3>
+                        <div class="projectHover">
+                            <p>This was mostly to 'flex' my responsive muscles. However the idea of writting a blog kind of stuck.</p>
+                        </div>
+                        <img class="projectImg" src="images/city.png" alt="">
+                    </div></a>
+                    <a href="/links/inventory/index.php">
+                        <div class="projectItem">
+                            <h3>SQL Inventory</h3>
+                            <div class="projectHover">
+                                <p>Utilized SQL to build an inventory for a theoretical bar and designed common Queries that you would use to check your inventory.</p> 
+                            </div>
+                            <img class="projectImg" id="sqlImage" src="images/sql.png" alt="">
+                        </div>
+                    </a>
+                    <a href="links/web-optimization/index.html"><div class="projectItem">
+                        <h3>Website Optimization</h3>
+                        <div class="projectHover">
+                            <p>Using outside the box thinking/practices to redesign a website for true speed and optimization. </p>        
+                        </div>
+                        <img class="projectImg" src="images/webOp.png" alt="">
+                    </div></a>
+                    <div class="projectItem">
+                        <h3>Resume</h3>
+                        <div class="projectHover">
+                            <p>Thats this website that your looking at! Let me know what you think!</p>       
+                        </div>
+                        <img class="projectImg" src="images/publication1.jpg" alt="">
                     </div>
-                    <img class="projectImg" src="images/pink-girl.png" alt="">
-                </div></a>
-                <a href="links/Cat-Clicker/index.html"><div class="projectItem">
-                    <h3>Cat-Clicker</h3>
-                    <div class="projectHover">
-                        <p>Honestly, did this as a school asingment. It's a bit goofy... but who hates cat pics?!?</p>    
-                    </div>            
-                    <img class="projectImg" src="images/cat1.jpg" alt="">
-                </div></a>
-                <a href="links/Start/index.html"><div class="projectItem">
-                    <h3>Reponsive Blog</h3>
-                    <div class="projectHover">
-                        <p>This was mostly to 'flex' my responsive muscles. However the idea of writting a blog kind of stuck.</p>
-                    </div>
-                    <img class="projectImg" src="images/city.png" alt="">
-                </div></a>
-                <div class="projectItem">
-                    <h3>SQL Inventory</h3>
-                    <div class="projectHover">
-                        <p>Utilized SQL to build an inventory for a theoretical bar and designed common Queries that you would use to check your inventory.</p>    
-                    </div>
-                    <img class="projectImg" src="images/inv.jpg" alt="">
-                </div>
-                <a href="links/web-optimization/index.html"><div class="projectItem">
-                    <h3>Website Optimization</h3>
-                    <div class="projectHover">
-                        <p>Using outside the box thinking/practices to redesign a website for true speed and optimization. </p>        
-                    </div>
-                    <img class="projectImg" src="images/webOp.png" alt="">
-                </div></a>
-                <div class="projectItem">
-                    <h3>Resume</h3>
-                    <div class="projectHover">
-                        <p>Thats this website that your looking at! Let me know what you think!</p>       
-                    </div>
-                    <img class="projectImg" src="images/publication1.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -146,15 +150,15 @@
                 <div class="social">
                     <div class="icons">
                         <a href="https://github.com/Scoiatael85"><img src="images/github.png" alt="github"></a>
-                        <a href="https://twitter.com/Daelric"><img src="images/linkedin.png" alt="twitter"></a>
-                        <a href="https://www.linkedin.com/in/scott-davis-9a186091"><img src="images/twitter.png" alt="linkedin"></a>
+                        <a href="https://www.linkedin.com/in/scott-davis-9a186091"><img src="images/linkedin.png" alt="twitter"></a>
+                        <a href="https://twitter.com/Daelric"><img src="images/twitter.png" alt="linkedin"></a>
                     </div>
                 </div>
             </div>
             
         </div>
 
-        <script src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
+        <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
         <script src="js/typed.js"></script>
         <script src="js/app.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.4.min.js"><\/script>')</script>
