fully reponsive "Technical Skills" area

--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
                 <div class="set2">
                     <ul class="set2text">
                         <li>Bootstrap</li>
-                        <li>Responsive Design</li>
+                        <li id="rwdLong">Resp<span class="abv">onsive</span> Design</li>
+                        <li id="rwdShort">RWD</li>
                         <li>Sass</li>
                         <li>SQL</li>
                     </ul>
