--- a/index.html
+++ b/index.html
@@ -69,19 +69,19 @@
                         </div>
                     </a>
                     <a href="links/web-optimization/index.html"><div class="projectItem">
-                        <h3>Website Optimization</h3>
+                        <h3>Web<span id="webOp1">site</span> Opt<span id="webOp2">imization</span></h3>
                         <div class="projectHover">
                             <p>Using outside the box thinking/practices to redesign a website for true speed and optimization. </p>        
                         </div>
                         <img class="projectImg" src="images/webOp.png" alt="">
                     </div></a>
-                    <div class="projectItem">
+                    <a href="www.google.com"><div class="projectItem">
                         <h3>Resume</h3>
                         <div class="projectHover">
                             <p>Thats this website that your looking at! Let me know what you think!</p>       
                         </div>
                         <img class="projectImg" src="images/publication1.jpg" alt="">
-                    </div>
+                    </div></a>
                 </div>
             </div>
         </div>
