--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
         <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="css/animate.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
         <!--<link rel="stylesheet" href="css/main.css"> -->
     </head>
@@ -27,6 +28,7 @@
             <div class="name">
                 <h1>Scott J. Davis</h1>
                 <h3>Web Developer</h3>
+                <a href="mailto:sdavis1985@gmail.com"><h2 class="animated rubberBand">sdavis1985@gmail.com</h2></a>
             </div>
             <div class="quoteBox">
                 <h3 class="quote"></h3>    
@@ -38,28 +40,34 @@
                 <h1>Projects</h1>
                 <div class="projectFlex">
 
-                    <a href="links/Bugg-Her/index.html"><div class="projectItem">
-                        <h3>Bugg-Her</h3>
-                        <div class="projectHover">
-                            <p>A fast and fun re-take on the old Frogger games. See what happens when you catch the golden scarab!</p>
+                    <a class="projectLink" href="links/Bugg-Her/index.html">
+                        <div id="buggher" class="animated projectItem">
+                            <h3>Bugg-Her</h3>
+                            <div class="projectHover">
+                                <p>A fast and fun re-take on the old Frogger games. See what happens when you catch the golden scarab!</p>
+                            </div>
+                            <img class="projectImg" src="images/pink-girl.png" alt="">
                         </div>
-                        <img class="projectImg" src="images/pink-girl.png" alt="">
-                    </div></a>
-                    <a href="links/Cat-Clicker/index.html"><div class="projectItem">
-                        <h3>Cat-Clicker</h3>
-                        <div class="projectHover">
-                            <p>Honestly, did this as a school asingment. It's a bit goofy... but who hates cat pics?!?</p>    
-                        </div>            
-                        <img class="projectImg" src="images/cat.png" alt="">
-                    </div></a>
-                    <a href="links/Start/index.html"><div class="projectItem">
-                        <h3>Reponsive Blog</h3>
-                        <div class="projectHover">
-                            <p>This was mostly to 'flex' my responsive muscles. However the idea of writting a blog kind of stuck.</p>
+                    </a>
+                    <a class="projectLink" href="links/Cat-Clicker/index.html">
+                        <div class="projectItem">
+                            <h3>Cat-Clicker</h3>
+                            <div class="projectHover">
+                                <p>Honestly, did this as a school asingment. It's a bit goofy... but who hates cat pics?!?</p>    
+                            </div>            
+                            <img class="projectImg" src="images/cat.png" alt="">
                         </div>
-                        <img class="projectImg" src="images/city.png" alt="">
-                    </div></a>
-                    <a href="/links/inventory/index.php">
+                    </a>
+                    <a class="projectLink" href="links/Start/index.html">
+                        <div class="projectItem">
+                            <h3>Reponsive Blog</h3>
+                            <div class="projectHover">
+                                <p>This was mostly to 'flex' my responsive muscles. However the idea of writting a blog kind of stuck.</p>
+                            </div>
+                            <img class="projectImg" src="images/city.png" alt="">
+                        </div>
+                    </a>
+                    <a class="projectLink" href="links/inventory/index.php">
                         <div class="projectItem">
                             <h3>SQL Inventory</h3>
                             <div class="projectHover">
@@ -68,20 +76,24 @@
                             <img class="projectImg" id="sqlImage" src="images/sql.png" alt="">
                         </div>
                     </a>
-                    <a href="links/web-optimization/index.html"><div class="projectItem">
-                        <h3>Web<span id="webOp1">site</span> Opt<span id="webOp2">imization</span></h3>
-                        <div class="projectHover">
-                            <p>Using outside the box thinking/practices to redesign a website for true speed and optimization. </p>        
+                    <a class="projectLink" href="links/web-optimization/views/pizza.html">
+                        <div class="projectItem">
+                            <h3>Web<span id="webOp1">site</span> Opt<span id="webOp2">imization</span></h3>
+                            <div class="projectHover">
+                                <p>Using outside the box thinking/practices to redesign a website for true speed and optimization. </p>        
+                            </div>
+                            <img class="projectImg" src="images/webOp.png" alt="">
                         </div>
-                        <img class="projectImg" src="images/webOp.png" alt="">
-                    </div></a>
-                    <a href="www.google.com"><div class="projectItem">
-                        <h3>Resume</h3>
-                        <div class="projectHover">
-                            <p>Thats this website that your looking at! Let me know what you think!</p>       
+                    </a>
+                    <a class="projectLink" href="#">
+                        <div class="projectItem">
+                            <h3>Resume</h3>
+                            <div class="projectHover">
+                                <p>Thats this website that your looking at! Let me know what you think!</p>       
+                            </div>
+                            <img class="projectImg" src="images/publication1.jpg" alt="">
                         </div>
-                        <img class="projectImg" src="images/publication1.jpg" alt="">
-                    </div></a>
+                    </a>
                 </div>
             </div>
         </div>
@@ -97,10 +109,10 @@
                         <li>JQuery</li>
                     </ul>
                     <ul class="set1img">
-                        <li><img src="images/dice1.png" alt="" width="20"><img src="images/dice2.png" alt="" width="20"><img src="images/dice3.png" alt="" width="20"><img src="images/dice4.png" alt="" width="20"></li>
-                        <li><img src="images/dice1.png" alt="" width="20"><img src="images/dice2.png" alt="" width="20"><img src="images/dice3.png" alt="" width="20"><img src="images/dice4.png" alt="" width="20"></li>
-                        <li><img src="images/dice1.png" alt="" width="20"><img src="images/dice2.png" alt="" width="20"><img src="images/dice3.png" alt="" width="20"></li>
-                        <li><img src="images/dice1.png" alt="" width="20"><img src="images/dice2.png" alt="" width="20"><img src="images/dice3.png" alt="" width="20"></li>
+                        <li><img class = "animated dice dice1" src="images/dice1.png" alt="" width="20"><img class = "animated dice dice2" src="images/dice2.png" alt="" width="20"><img class = "animated dice dice3" src="images/dice3.png" alt="" width="20"><img class = "animated dice dice4" src="images/dice4.png" alt="" width="20"></li>
+                        <li><img class = "animated dice dice1" src="images/dice1.png" alt="" width="20"><img class = "animated dice dice2" src="images/dice2.png" alt="" width="20"><img class = "animated dice dice3" src="images/dice3.png" alt="" width="20"><img class = "animated dice dice4" src="images/dice4.png" alt="" width="20"></li>
+                        <li><img class = "animated dice dice1" src="images/dice1.png" alt="" width="20"><img class = "animated dice dice2" src="images/dice2.png" alt="" width="20"><img class = "animated dice dice3" src="images/dice3.png" alt="" width="20"></li>
+                        <li><img class = "animated dice dice1" src="images/dice1.png" alt="" width="20"><img class = "animated dice dice2" src="images/dice2.png" alt="" width="20"><img class = "animated dice dice3" src="images/dice3.png" alt="" width="20"></li>
                     </ul>
                 </div>
                 <div class="set2">
@@ -112,10 +124,10 @@
                         <li>SQL</li>
                     </ul>
                     <ul class="set2img">
-                        <li><img src="images/dice1.png" alt="" width="20"><img src="images/dice2.png" alt="" width="20"><img src="images/dice3.png" alt="" width="20"></li>
-                        <li><img src="images/dice1.png" alt="" width="20"><img src="images/dice2.png" alt="" width="20"><img src="images/dice3.png" alt="" width="20"></li>
-                        <li><img src="images/dice1.png" alt="" width="20"><img src="images/dice2.png" alt="" width="20"><img src="images/dice3.png" alt="" width="20"></li>
-                        <li><img src="images/dice1.png" alt="" width="20"><img src="images/dice2.png" alt="" width="20"></li>
+                        <li><img class = "animated dice dice1" src="images/dice1.png" alt="" width="20"><img class = "animated dice dice2" src="images/dice2.png" alt="" width="20"><img class = "animated dice dice3" src="images/dice3.png" alt="" width="20"></li>
+                        <li><img class = "animated dice dice1" src="images/dice1.png" alt="" width="20"><img class = "animated dice dice2" src="images/dice2.png" alt="" width="20"><img class = "animated dice dice3" src="images/dice3.png" alt="" width="20"></li>
+                        <li><img class = "animated dice dice1" src="images/dice1.png" alt="" width="20"><img class = "animated dice dice2" src="images/dice2.png" alt="" width="20"><img class = "animated dice dice3" src="images/dice3.png" alt="" width="20"></li>
+                        <li><img class = "animated dice dice1" src="images/dice1.png" alt="" width="20"><img class = "animated dice dice2" src="images/dice2.png" alt="" width="20"></li>
                     </ul>
                 </div>
             </div>
@@ -161,6 +173,7 @@
 
         <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
         <script src="js/typed.js"></script>
+        <script src="js/jquery.appear.js"></script>
         <script src="js/app.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.4.min.js"><\/script>')</script>
 
