fix contsctHeader RWD

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="name">
                 <h1>Scott J. Davis</h1>
                 <h3>Web Developer</h3>
-                <a href="mailto:sdavis1985@gmail.com"><h2 class="animated rubberBand">sdavis1985@gmail.com</h2></a>
+                <a href="mailto:sdavis1985@gmail.com"><h3 class="animated rubberBand">sdavis1985@gmail.com</h3></a>
             </div>
             <div class="quoteBox">
                 <h3 class="quote"></h3>    
@@ -53,7 +53,7 @@
                         <div class="projectItem">
                             <h3>Cat-Clicker</h3>
                             <div class="projectHover">
-                                <p>Honestly, did this as a school asingment. It's a bit goofy... but who hates cat pics?!?</p>    
+                                <p>A great time waster. Why else would someone use the internet?</p>    
                             </div>            
                             <img class="projectImg" src="images/cat.png" alt="">
                         </div>
@@ -62,7 +62,7 @@
                         <div class="projectItem">
                             <h3>Reponsive Blog</h3>
                             <div class="projectHover">
-                                <p>This was mostly to 'flex' my responsive muscles. However the idea of writting a blog kind of stuck.</p>
+                                <p>A way to “flex” my responsive muscles.</p>
                             </div>
                             <img class="projectImg" src="images/city.png" alt="">
                         </div>
@@ -71,7 +71,7 @@
                         <div class="projectItem">
                             <h3>SQL Inventory</h3>
                             <div class="projectHover">
-                                <p>Utilized SQL to build an inventory for a theoretical bar and designed common Queries that you would use to check your inventory.</p> 
+                                <p>Built an inventory and designed common queries for a theoretical bar using SQL.</p> 
                             </div>
                             <img class="projectImg" id="sqlImage" src="images/sql.png" alt="">
                         </div>
@@ -80,7 +80,7 @@
                         <div class="projectItem">
                             <h3>Web<span id="webOp1">site</span> Opt<span id="webOp2">imization</span></h3>
                             <div class="projectHover">
-                                <p>Using outside the box thinking/practices to redesign a website for true speed and optimization. </p>        
+                                <p>Outside the box thinking/practices to redesign a website for true speed and optimization. </p>        
                             </div>
                             <img class="projectImg" src="images/webOp.png" alt="">
                         </div>
@@ -89,7 +89,7 @@
                         <div class="projectItem">
                             <h3>Resume</h3>
                             <div class="projectHover">
-                                <p>Thats this website that your looking at! Let me know what you think!</p>       
+                                <p>It’s THIS website! Let me know what you think!</p>       
                             </div>
                             <img class="projectImg" src="images/publication1.jpg" alt="">
                         </div>
