--- a/links/Bugg-Her/index.html
+++ b/links/Bugg-Her/index.html
@@ -5,7 +5,7 @@
     <title>JS - VG: Bugger</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body background="images/blue-eyes.jpg">
+<body background="images/blueEyes.jpg">
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
