fix "break" and made the projects descriptions look cleaner

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <div id="buggher" class="animated projectItem">
                             <h3>Bugg-Her</h3>
                             <div class="projectHover">
-                                <p>A fast and fun re-take on the old Frogger games. See what happens when you catch the golden scarab!</p>
+                                <p>A re-take on an old game. See what happens when you catch the golden scarab!</p>
                             </div>
                             <img class="projectImg" src="images/pink-girl.png" alt="">
                         </div>
@@ -62,7 +62,7 @@
                         <div class="projectItem">
                             <h3>Reponsive Blog</h3>
                             <div class="projectHover">
-                                <p>A way to “flex” my responsive muscles.</p>
+                                <p>A way to “flex” my responsive muscles. </br></br> Yeah, I'm that punny!</p>
                             </div>
                             <img class="projectImg" src="images/city.png" alt="">
                         </div>
@@ -80,7 +80,7 @@
                         <div class="projectItem">
                             <h3>Web<span id="webOp1">site</span> Opt<span id="webOp2">imization</span></h3>
                             <div class="projectHover">
-                                <p>Outside the box thinking/practices to redesign a website for true speed and optimization. </p>        
+                                <p>Outside the box thinking/ practices to redesign a website for true speed and optimization. </p>        
                             </div>
                             <img class="projectImg" src="images/webOp.png" alt="">
                         </div>
@@ -89,7 +89,7 @@
                         <div class="projectItem">
                             <h3>Resume</h3>
                             <div class="projectHover">
-                                <p>It’s THIS website! Let me know what you think!</p>       
+                                <p>It’s THIS website! </br></br> Let me know what you think!</p>       
                             </div>
                             <img class="projectImg" src="images/publication1.jpg" alt="">
                         </div>
