--- a/links/Bugg-Her/index.html
+++ b/links/Bugg-Her/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <title>JS - VG: Bugger</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" media="only screen and (max-device-width: 750px)" href="css/mobile.css" />
+<!--     <meta name="viewport" content="width=device-width, initial-scale=1"> -->
 </head>
 <body background="images/blueEyes.jpg">
+	<div class="d-pad">
+		<div class="dButton" id="up">↑</div>
+
+		<div class="dButton" id="down">↓</div>
+
+		<div class="dButton" id="left">←</div>
+		<div class="dButton" id="right">→</div>
+    </div>
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
