--- a/links/Bugg-Her/index.html
+++ b/links/Bugg-Her/index.html
@@ -16,6 +16,7 @@
 		<div class="dButton" id="left">←</div>
 		<div class="dButton" id="right">→</div>
     </div>
+    <script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
