--- a/links/Bugg-Her/index.html
+++ b/links/Bugg-Her/index.html
@@ -5,7 +5,8 @@
     <title>JS - VG: Bugger</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" media="only screen and (max-device-width: 750px)" href="css/mobile.css" />
-<!--     <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+    <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"> 
+
 </head>
 <body background="images/blueEyes.jpg">
 	<div class="d-pad">
