style buttons on the page

--- a/links/Bugg-Her/index.html
+++ b/links/Bugg-Her/index.html
@@ -10,12 +10,12 @@
 </head>
 <body background="images/blueEyes.jpg">
 	<div class="d-pad">
-		<div class="dButton" id="up">↑</div>
+		<button class="dButton" id="up">↑</button>
 
-		<div class="dButton" id="down">↓</div>
+		<button class="dButton" id="down">↓</button>
 
-		<div class="dButton" id="left">←</div>
-		<div class="dButton" id="right">→</div>
+		<button class="dButton" id="left">←</button>
+		<button class="dButton" id="right">→</button>
     </div>
     <script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
     <script src="js/resources.js"></script>
