--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             </div>
             
         </div>
+    <section>
         <div class="projectcontain">
             <div class="projects">
                 <h1>Projects</h1>
@@ -180,7 +181,7 @@
             </div>
             
         </div>
-
+    </section>	
         <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
         <script src="js/typed-min.js"></script>
         <script src="js/app-min.js"></script>
